añadidas razas de perro solo 2

--- a/dogs.html
+++ b/dogs.html
@@ -8,8 +8,16 @@
 <body>
     <h1>Dogs</h1>
     <p>Well know breeders
-        
+
     </p>
+
+    <h2>Razas de Perros</h2>
+    <ul>
+        <li>Hush Puppy</li>
+        <li>San Bernardo</li>
+
+
+    </ul>
     <a href="https://www.google.com">Ir a google</a>
 </body>
 </html>
